# quizar

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  template.env
app/: prestart.sh
app/alembic/: env.py
app/app/: main.py
app/app/api/: deps.py
app/app/api/v1/: api.py
app/app/api/v1/endpoints/: answer.py  attempt.py  question.py  quiz.py  solution.py  submission.py  user.py  utils.py
app/app/core/: config.py
app/app/crud/: __init__.py  answer.py  attempt.py  base.py  question.py  quiz.py  solution.py  submission.py  user.py
app/app/db/: base.py  base_class.py
app/app/models/: __init__.py  answer.py  attempt.py  question.py  quiz.py  solution.py  submission.py  user.py
app/app/schemas/: __init__.py  answer.py  attempt.py  common.py  question.py  quiz.py  solution.py  submission.py  user.py  utils.py
diagram/: quizar.drawio
tests/load/: main.py
tests/usecase/: main.py
